--- a/agb.html
+++ b/agb.html
@@ -33,22 +33,33 @@
           <p class="sub">Allgemeine Geschäftsbedingungen</p>
         </div>
         <div class="legal__content reveal">
-          <p><strong>1. Geltungsbereich</strong><br>
-Gilt für alle von EmreDetails angebotenen Dienstleistungen und Buchungen via WhatsApp, E-Mail oder Telefon.</p>
+          
+<p><strong>Allgemeine Geschäftsbedingungen von EmreDetails</strong></p>
+
+<p><strong>1. Geltungsbereich</strong><br>
+Diese Allgemeinen Geschäftsbedingungen gelten für sämtliche Dienstleistungen, die von EmreDetails angeboten und durch Kunden über alle Kommunikationswege (z. B. WhatsApp, E-Mail, Telefon) gebucht werden.</p>
+
 <p><strong>2. Terminbuchung & Zahlung</strong><br>
-Termin gilt nach Vereinbarung als verbindlich. Zahlung vor Ort oder per Überweisung nach Leistung.</p>
-<p><strong>3. Stornierung</strong><br>
-Mindestens 24h vor Termin, sonst Anspruch auf zukünftige Buchung ausgeschlossen.</p>
-<p><strong>4. Durchführung</strong><br>
-Leistung erfolgt wie besichtigt und vereinbart. Preis nach Aufwand. Transparente Absprache vor Durchführung.</p>
+Die Terminvereinbarung erfolgt verbindlich nach Absprache. Die Zahlung ist unmittelbar nach Durchführung der Dienstleistung fällig – in bar oder per Überweisung. Ein Termin gilt als bestätigt, sobald ein konkreter Zeitpunkt beidseitig vereinbart wurde.</p>
+
+<p><strong>3. Stornierung & Verfügbarkeit</strong><br>
+Terminänderungen oder Absagen müssen spätestens 24 Stunden vor dem vereinbarten Termin erfolgen. Bei kurzfristiger Absage oder Nichterscheinen behalten wir uns vor, künftige Buchungen abzulehnen. Da Termine nur begrenzt verfügbar sind, kann es zu Wartezeiten kommen. Es besteht kein Anspruch auf kurzfristige Terminvergabe.</p>
+
+<p><strong>4. Leistungen & Durchführung</strong><br>
+Die durchgeführte Dienstleistung richtet sich nach der individuellen Absprache vor Ort und dem Zustand des Fahrzeugs. EmreDetails verpflichtet sich zur sorgfältigen und professionellen Ausführung aller vereinbarten Leistungen. Die Preise richten sich nach dem tatsächlichen Aufwand und Zustand des Fahrzeugs und werden vor Beginn der Arbeiten verbindlich mitgeteilt.</p>
+
 <p><strong>5. Haftung</strong><br>
-Haftung nur bei grober Fahrlässigkeit oder Vorsatz. Bestehende Vorschäden ausgeschlossen.</p>
+Für Schäden, die auf grobe Fahrlässigkeit oder Vorsatz durch EmreDetails zurückzuführen sind, wird gehaftet. Für bereits vorhandene Schäden oder unerkannte Vorschäden übernehmen wir keine Haftung. Eine Haftung für Folgeschäden, die durch nicht sachgemäße Nachpflege oder Nutzung entstehen, ist ausgeschlossen.</p>
+
 <p><strong>6. Gewährleistung</strong><br>
-Mängel binnen 7 Tagen schriftlich melden. EmreDetails prüft und bessert ggf. nach.</p>
+Mängel an der erbrachten Dienstleistung müssen innerhalb von 7 Tagen schriftlich mitgeteilt werden. EmreDetails prüft diese und wird bei berechtigten Reklamationen im Rahmen der gesetzlichen Gewährleistung nachbessern.</p>
+
 <p><strong>7. Datenschutz</strong><br>
-Erhobene Daten werden vertraulich behandelt. Details siehe Datenschutzerklärung.</p>
-<p><strong>8. Gerichtsstand</strong><br>
-Gerichtsstand ist der Sitz von EmreDetails in Marl.</p>
+Alle im Rahmen der Buchung erhobenen personenbezogenen Daten werden vertraulich behandelt und ausschließlich zur Abwicklung des Auftrags verwendet. Es erfolgt keine Weitergabe an Dritte. Weitere Informationen finden Sie in der Datenschutzerklärung.</p>
+
+<p><strong>8. Schlussbestimmungen</strong><br>
+Es gilt das Recht der Bundesrepublik Deutschland. Gerichtsstand ist der Firmensitz von EmreDetails. Sollten einzelne Klauseln unwirksam sein, bleibt die Wirksamkeit der übrigen Bestimmungen unberührt.</p>
+
         </div>
       </div>
     </section>
@@ -64,7 +75,6 @@ Gerichtsstand ist der Sitz von EmreDetails in Marl.</p>
           Fahrzeugaufbereitung in Marl. Fokus auf Innenreinigung, Lackpflege und Versiegelung.
         </div>
       </div>
-
       <div class="footer__right">
         <div class="footer__legal" role="list" aria-label="Rechtliches">
           <a class="footer__link" href="./impressum.html" role="listitem">Impressum</a>
@@ -78,10 +88,7 @@ Gerichtsstand ist der Sitz von EmreDetails in Marl.</p>
     </div>
   </footer>
 
-  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">
-    WhatsApp
-  </a>
-
+  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">WhatsApp</a>
   <script src="./main.js" defer></script>
 </body>
 </html>
