--- a/datenschutz.html
+++ b/datenschutz.html
@@ -30,26 +30,35 @@
       <div class="container">
         <div class="sectionHead reveal">
           <h1 class="h2">Datenschutzerklärung</h1>
-          <p class="sub">Wie wir mit Ihren Daten umgehen</p>
+          <p class="sub">Datenschutz</p>
         </div>
         <div class="legal__content reveal">
-          <p><strong>1. Verantwortlicher</strong><br>
+          
+<p>Wir nehmen den Schutz Ihrer personenbezogenen Daten sehr ernst. Die Verarbeitung Ihrer Daten erfolgt ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, BDSG, DDG).</p>
+
+<p><strong>1. Verantwortlicher</strong><br>
 EmreDetails<br>
 Inhaber: Emre Özkul<br>
 Hebbelstr. 75<br>
 45768 Marl<br>
 Deutschland<br>
 E-Mail: emredetails@gmail.com</p>
+
 <p><strong>2. Erhebung und Verarbeitung personenbezogener Daten</strong><br>
-Bei Kontaktaufnahme (WhatsApp, E-Mail, Telefon, Formular) erheben wir: Name, Telefonnummer, E-Mail-Adresse, Fahrzeugdaten, Terminwünsche, Rechnungsdaten. Diese Daten dienen nur zur Bearbeitung Ihrer Anfrage, Angebotserstellung, Durchführung der Dienstleistung und Rechnung.</p>
+Im Rahmen einer Kontaktaufnahme (z. B. über WhatsApp, E-Mail, Telefon oder Website) erheben wir folgende Daten: Name, Telefonnummer, E-Mail-Adresse (falls angegeben), Fahrzeugdaten (Modell, Zustand, etc.), Terminwünsche, Rechnungsdaten (für steuerliche Zwecke). Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage, zur Angebotserstellung, Terminvergabe, Durchführung der Dienstleistung und zur Rechnungsstellung verwendet.</p>
+
 <p><strong>3. Speicherung & Dauer</strong><br>
-Ihre Daten werden nur so lange gespeichert, wie zur Auftragsabwicklung oder gesetzlich erforderlich.</p>
+Ihre Daten werden nur so lange gespeichert, wie es zur Erfüllung des Zwecks (z. B. Abwicklung des Auftrags) erforderlich ist oder gesetzlich vorgeschrieben ist (z. B. steuerliche Aufbewahrungsfristen).</p>
+
 <p><strong>4. Weitergabe an Dritte</strong><br>
-Keine Weitergabe – außer gesetzlich verpflichtend.</p>
+Es erfolgt eine Weitergabe Ihrer personenbezogenen Daten an Dritte. Ausgenommen hiervon sind gesetzliche Verpflichtungen.</p>
+
 <p><strong>5. Ihre Rechte</strong><br>
-Auskunft, Berichtigung, Löschung, Einschränkung, Übertragbarkeit, Widerruf. Kontakt jederzeit möglich.</p>
-<p><strong>6. WhatsApp</strong><br>
-Bei Kontakt über WhatsApp beachten Sie bitte, dass Daten an WhatsApp Ireland Ltd. übertragen werden.</p>
+Sie haben das Recht auf Auskunft über Ihre gespeicherten Daten, Berichtigung oder Löschung, Einschränkung der Verarbeitung, Datenübertragbarkeit sowie Widerruf einer erteilten Einwilligung. Kontaktieren Sie uns hierfür jederzeit unter den oben genannten Kontaktdaten.</p>
+
+<p><strong>6. Kontaktaufnahme über WhatsApp</strong><br>
+Wenn Sie uns über WhatsApp kontaktieren, beachten Sie bitte, dass Daten (inkl. Telefonnummer) an die WhatsApp Ireland Limited übermittelt werden. Wir empfehlen keine sensiblen Daten über diesen Kanal zu teilen.</p>
+
         </div>
       </div>
     </section>
@@ -65,7 +74,6 @@ Bei Kontakt über WhatsApp beachten Sie bitte, dass Daten an WhatsApp Ireland Lt
           Fahrzeugaufbereitung in Marl. Fokus auf Innenreinigung, Lackpflege und Versiegelung.
         </div>
       </div>
-
       <div class="footer__right">
         <div class="footer__legal" role="list" aria-label="Rechtliches">
           <a class="footer__link" href="./impressum.html" role="listitem">Impressum</a>
@@ -79,10 +87,7 @@ Bei Kontakt über WhatsApp beachten Sie bitte, dass Daten an WhatsApp Ireland Lt
     </div>
   </footer>
 
-  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">
-    WhatsApp
-  </a>
-
+  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp öffnen">WhatsApp</a>
   <script src="./main.js" defer></script>
 </body>
 </html>
