--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>EmreDetails – Fahrzeugaufbereitung Marl</title>
+  <meta name="description" content="Premium Fahrzeugaufbereitung in Marl – Innenraumreinigung, Politur, Keramikversiegelung. Jetzt Termin sichern!" />
+  <link rel="stylesheet" href="./style_final_fixed.css" />
+</head>
+<body>
+  <header class="topbar" data-elevate>
+    <div class="container topbar__inner">
+      <a class="brand" href="./index.html" aria-label="Startseite EmreDetails">
+        <img class="brand__logo" src="./logo.png" alt="EmreDetails Logo" loading="eager">
+      </a>
+      <nav class="nav">
+        <a class="nav__link" href="./leistungen.html">Leistungen</a>
+        <a class="nav__link" href="./kontakt.html">Kontakt</a>
+      </nav>
+      <div class="topbar__actions">
+        <a class="pill pill--ghost" href="https://instagram.com/emredetails" target="_blank" rel="noreferrer">Instagram</a>
+        <a class="pill pill--primary" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer">WhatsApp</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="content">
+
+    <section class="section hero">
+      <div class="container">
+        <div class="hero__inner">
+          <div class="hero__content reveal">
+            <h1>Detailverliebt bis ins letzte Finish</h1>
+            <p>Fahrzeugaufbereitung mit Anspruch. Für alle, die mehr erwarten als „sauber“.</p>
+            <a href="./leistungen.html" class="pill pill--primary">Leistungen entdecken</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section video reveal">
+      <div class="container">
+        <iframe allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/rgNpZKLtmhQ?rel=0&amp;controls=0&amp;autoplay=1&amp;mute=1&amp;start=0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" title="Audi SQ5 Full Interior Clean - Detailing a Luxury SUV!"></iframe>
+      </div>
+    </section>
+
+    <section class="section process reveal">
+      <div class="container">
+        <div class="sectionHead">
+          <h2 class="h2">So läuft’s ab</h2>
+          <p class="sub">Schnell, einfach, effizient</p>
+        </div>
+        <div class="process__grid">
+          <div class="process__item"><strong>1. Anfrage</strong><br />Über WhatsApp, Telefon oder Kontaktformular</div>
+          <div class="process__item"><strong>2. Beratung</strong><br />Besichtigung & individuelles Angebot</div>
+          <div class="process__item"><strong>3. Durchführung</strong><br />Aufbereitung nach Terminvereinbarung</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section map reveal">
+      <div class="container">
+        <div class="sectionHead">
+          <h2 class="h2">Standort</h2>
+          <p class="sub">Nur mit Termin – gesichert im Garagenpark</p>
+        </div>
+        <iframe src="https://www.google.com/maps?q=Benzstraße+15b,+45772+Marl&output=embed" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="container footer__inner">
+      <div class="footer__left">
+        <div class="footer__brand">
+          <img class="footer__logo" src="./logo.png" alt="EmreDetails">
+        </div>
+        <div class="footer__sub">
+          Fahrzeugaufbereitung in Marl mit Fokus auf Innenreinigung, Lackkorrektur und Keramikversiegelung.
+        </div>
+      </div>
+      <div class="footer__right">
+        <div class="footer__legal">
+          <a class="footer__link" href="./impressum.html">Impressum</a>
+          <a class="footer__link" href="./agb.html">AGB</a>
+          <a class="footer__link" href="./datenschutz.html">Datenschutz</a>
+        </div>
+        <div class="footer__copy">© <span id="year"></span> EmreDetails</div>
+      </div>
+    </div>
+  </footer>
+
+  <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer">
+    WhatsApp
+  </a>
+
+  <script src="./main_full.js" defer></script>
+</body>
+</html>
