--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>EmreDetails – Fahrzeugaufbereitung Marl</title>
   <meta name="description" content="Premium Fahrzeugaufbereitung in Marl – Innenraumreinigung, Politur, Keramikversiegelung. Jetzt Termin sichern!" />
-  <link rel="stylesheet" href="./style_final_fixed.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <header class="topbar" data-elevate>
