--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
             <iframe src="https://www.youtube.com/embed/rgNpZKLtmhQ?rel=0&controls=0&autoplay=1&mute=1&loop=1&playlist=rgNpZKLtmhQ" title="Emre Details Work" allow="autoplay; encrypted-media"></iframe>
           </div>
           
-          <div class="hero__socials">
-            <a class="pill pill--ghost glass6" href="https://www.instagram.com/emredetails/" target="_blank">
-              <img class="pill__img" src="./insta.jpg" alt=""> Instagram
-            </a>
-            <a class="pill pill--ghost glass6" href="https://www.tiktok.com/@emredetails" target="_blank">
-               TikTok
-            </a>
-            <a class="pill pill--ghost glass6" href="https://www.youtube.com/@EmreDetails" target="_blank">
-               YouTube
-            </a>
-          </div>
+<div class="hero__socials">
+  <a class="pill pill--ghost glass6" href="https://www.instagram.com/emredetails/" target="_blank">
+    <img class="pill__img" src="./insta.jpg" alt=""> Instagram
+  </a>
+  <a class="pill pill--ghost glass6" href="https://www.tiktok.com/@emredetails" target="_blank">
+     <img class="pill__img" src="./tiktok.png" alt=""> TikTok
+  </a>
+  <a class="pill pill--ghost glass6" href="https://www.youtube.com/@EmreDetails" target="_blank">
+     <img class="pill__img" src="./youtube.jpg" alt=""> YouTube
+  </a>
+</div>
         </div>
       </div>
     </section>
@@ -433,11 +433,10 @@
       </div>
     </footer>
 
-    <a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp Kontakt">
-      <span class="fab__ring" aria-hidden="true"></span>
-      <img class="fab__img" src="./whatsapp.png" alt="">
-      <span class="fab__text">WhatsApp</span>
-    </a>
+<a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp Kontakt">
+  <img class="fab__img" src="./whatsapp.png" alt="WhatsApp">
+  <span class="fab__text">WhatsApp</span>
+</a>
   </main>
 
   <script src="./main.js" defer></script>
