--- a/kontakt.html
+++ b/kontakt.html
@@ -130,6 +130,25 @@
     </section>
   </main>
   
+    <footer class="footer">
+      <div class="container footer__inner">
+        <div class="footer__left">
+          <div class="footer__brand">
+             <img class="footer__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="EmreDetails">
+          </div>
+          <div class="footer__sub">Fahrzeugaufbereitung Marl.</div>
+        </div>
+        <div class="footer__right">
+          <div class="footer__legal">
+             <a class="footer__link" href="./impressum.html">Impressum</a>
+             <a class="footer__link" href="./datenschutz.html">Datenschutz</a>
+          </div>
+          <div class="footer__copy">© <span id="year"></span> EmreDetails</div>
+        </div>
+      </div>
+    </footer>
+    <a class="fab" href="https://wa.me/4915755821180"><img class="fab__img" src="./whatsapp.png"><span class="fab__text">WhatsApp</span></a>
+  </main>
   <script src="./main.js" defer></script>
 </body>
 </html>
