--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </nav>
 
       <div class="topbar__actions">
-        <a class="pill pill--primary" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer">
+        <a class="pill pill--primary" href="https://wa.me/491714745229" target="_blank" rel="noreferrer">
           <img class="pill__img" src="./whatsapp.png" alt="" loading="lazy"> WhatsApp
         </a>
 
@@ -65,7 +65,7 @@
         <a class="mobileNav__link" href="./leistungen.html">Leistungen</a>
         <a class="mobileNav__link" href="./kontakt.html">Kontakt</a>
         <div class="mobileNav__cta">
-          <a class="pill pill--primary pill--full" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer">
+          <a class="pill pill--primary pill--full" href="https://wa.me/491714745229" target="_blank" rel="noreferrer">
             <img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp Anfrage
           </a>
         </div>
@@ -121,13 +121,13 @@
           
 <div class="hero__socials">
   <a class="pill pill--ghost glass6" href="https://www.instagram.com/emredetails/" target="_blank">
-    <img class="pill__img" src="./insta.jpg" alt=""> Instagram
+    <img class="pill__img" src="./instagram.png" alt=""> Instagram
   </a>
   <a class="pill pill--ghost glass6" href="https://www.tiktok.com/@emredetails" target="_blank">
      <img class="pill__img" src="./tiktok.png" alt=""> TikTok
   </a>
   <a class="pill pill--ghost glass6" href="https://www.youtube.com/@EmreDetails" target="_blank">
-     <img class="pill__img" src="./youtube.jpg" alt=""> YouTube
+     <img class="pill__img" src="./youtube.png" alt=""> YouTube
   </a>
 </div>
         </div>
@@ -379,7 +379,7 @@
             </p>
 
             <div class="contact__actions">
-              <a class="pill pill--primary pill--lg pill--full glass6" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer">
+              <a class="pill pill--primary pill--lg pill--full glass6" href="https://wa.me/491714745229" target="_blank" rel="noreferrer">
                 <img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp öffnen
               </a>
               <a class="pill pill--ghost pill--lg pill--full glass6" href="./kontakt.html">
@@ -390,11 +390,11 @@
             <div class="contact__meta">
               <div class="metaLine glass6">
                 <span class="metaLine__k">Standort</span>
-                <span class="metaLine__v">Hebbelstr. 75, 45768 Marl</span>
+                <span class="metaLine__v">Benzstr. 15b, 45768 Marl</span>
               </div>
               <div class="metaLine glass6 reveal">
                 <span class="metaLine__k">Kontakt</span>
-                <span class="metaLine__v">+49 1575 5821180</span>
+                <span class="metaLine__v">+49 171 4745229</span>
               </div>
             </div>
           </div>
@@ -409,7 +409,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.484617466548!2d7.1147!3d51.658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDM5JzI4LjgiTiA3wrAwNyc1Mi45IkU!5e0!3m2!1sde!2sde!4v1600000000000!5m2!1sde!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
               </div>
               <div class="mapCard__bottom glass6">
-                <span class="muted">Adresse:</span> Hebbelstr. 75, Marl
+                <span class="muted">Adresse:</span> Benzstr. 15b, Marl
               </div>
             </div>
           </div>
@@ -446,7 +446,7 @@
       </div>
     </footer>
 
-<a class="fab" href="https://wa.me/4915755821180" target="_blank" rel="noreferrer" aria-label="WhatsApp Kontakt">
+<a class="fab" href="https://wa.me/491714745229" target="_blank" rel="noreferrer" aria-label="WhatsApp Kontakt">
   <img class="fab__img" src="./whatsapp.png" alt="WhatsApp">
   <span class="fab__text">WhatsApp</span>
 </a>
