--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div class="mapCard">
               <div class="mapCard__top glass6 reveal">
                 <div class="mapCard__title">Anfahrt</div>
-                <a class="mapCard__link" href="https://goo.gl/maps/PLACEHOLDER_LINK" target="_blank" rel="noreferrer">Route öffnen</a>
+                <a class="mapCard__link" href="https://goo.gl/maps/iuNBMoV6JiWekaXh9" target="_blank" rel="noreferrer">Route planen</a>
               </div>
               <div class="mapCard__frame">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.484617466548!2d7.1147!3d51.658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDM5JzI4LjgiTiA3wrAwNyc1Mi45IkU!5e0!3m2!1sde!2sde!4v1600000000000!5m2!1sde!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
