--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             </div>
 
-            <a class="pill pill--ghost" href="https://www.google.com/search?q=emredetails+marl" target="_blank" rel="noreferrer">
+            <a class="pill pill--ghost" href="https://share.google/EDvqDTvK6jW0Zz1nK" target="_blank" rel="noreferrer">
               <span class="pill__icon" aria-hidden="true">
                 <span class="gDot"></span>
               </span>
