--- a/kontakt.html
+++ b/kontakt.html
@@ -108,24 +108,27 @@
           </div>
 
         </div>
+            <div class="contact__meta">
+              <div class="metaLine glass6">
+                <span class="metaLine__k">Standort</span>
+                <span class="metaLine__v">Benzstr. 15b, 45768 Marl</span>
+              </div>
 
-        <div class="map-container reveal" style="margin-top: 60px;">
-          <div class="mapCard">
-            <div class="mapCard__top glass6">
-              <div class="mapCard__title">Anfahrt</div>
-              <a class="mapCard__link" href="https://www.google.com/maps/dir//Hebbelstra%C3%9Fe+75,+45768+Marl" target="_blank" rel="noreferrer">
-                Route planen
-              </a>
-            </div>
-            <div class="mapCard__frame">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.910327341999!2d7.12345678!3d51.654321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTHCsDM5JzE1LjYiTiA3wrAwNyc0MC4wIkU!5e0!3m2!1sde!2sde!4v1600000000000!5m2!1sde!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="mapCard__bottom glass6">
-              <span class="muted">Adresse:</span> Hebbelstraße 75, 45768 Marl
+          <div class="contact__right">
+            <div class="mapCard">
+              <div class="mapCard__top glass6 reveal">
+                <div class="mapCard__title">Anfahrt</div>
+                <a class="mapCard__link" href="https://goo.gl/maps/iuNBMoV6JiWekaXh9" target="_blank" rel="noreferrer">Route planen</a>
+              </div>
+              <div class="mapCard__frame">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7788.05213582847!2d7.159474398054758!3d51.67298426839177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8fbf51b050897%3A0xe081f8b5559b812e!2sEmreDetails!5e1!3m2!1sde!2sde!4v1768547069278!5m2!1sde!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="mapCard__bottom glass6">
+                <span class="muted">Adresse:</span> Benzstr. 15b, Marl
+              </div>
             </div>
           </div>
         </div>
-
       </div>
     </section>
   </main>
