--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
         <a class="nav__link" href="./kontakt.html">Kontakt</a>
       </nav>
-      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/4915755821180">WhatsApp</a></div>
+        <a class="pill pill--primary" href="https://wa.me/4915755821180"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a>
     </div>
   </header>
 
