--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div class="mapCard">
               <div class="mapCard__top glass6 reveal">
                 <div class="mapCard__title">Anfahrt</div>
-                <a class="mapCard__link" href="https://goo.gl/maps/iuNBMoV6JiWekaXh9" target="_blank" rel="noreferrer">Route planen</a>
+                <a class="mapCard__link" href="https://www.google.com/maps/dir//Benzstra%C3%9Fe+15b,+45768+Marl/@51.666,7.1,15z" target="_blank" rel="noreferrer">Route planen</a>
               </div>
               <div class="mapCard__frame">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7788.05213582847!2d7.159474398054758!3d51.67298426839177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8fbf51b050897%3A0xe081f8b5559b812e!2sEmreDetails!5e1!3m2!1sde!2sde!4v1768547069278!5m2!1sde!2sde" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
