--- a/index.html
+++ b/index.html
@@ -164,44 +164,44 @@
           <div class="reviewsMarquee" aria-label="Kundenbewertungen">
             <div class="reviewsTrack">
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Justin M.</div><div class="reviewCard__time">vor 1 Monat</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Cansu Dlg</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Super Arbeit! Mein Wagen sieht aus wie neu. Emre nimmt sich wirklich Zeit für jedes Detail.</div>
+                <div class="reviewCard__text">Zustand vom Vorbesitzer meines Autos war katastrophal !!! Überall Hundehaare und es hat stark gerochen.. danach das Auto in Emres Hände übergeben und der Zustand war nicht mehr wieder zu erkennen.</div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Sarah K.</div><div class="reviewCard__time">vor 2 Monaten</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Orange</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Leasingrückgabe gerettet. Alle Kratzer rausbekommen, keine Nachzahlung. Danke!</div>
+                <div class="reviewCard__text">Einfach mega Handarbeit, keine Fließbandarbeit wie bei den großen Ketten. Bei Emre wird das Auto wirklich porentief sauber. ich bringe mein Auto regelmäßig hierhin damit das auch so bleibt, absolut empfehlenswert</div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Michael B.</div><div class="reviewCard__time">vor 3 Wochen</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Anil</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Keramikversiegelung ist der Hammer. Wasser perlt einfach ab. Top Beratung vorab.</div>
+                <div class="reviewCard__text">Top Arbeit! Sehr professionelle Autoaufbereitung mit viel Liebe zum Detail. Das Fahrzeug sah nach der Aufbereitung aus wie neu. Freundlicher Kontakt, saubere Arbeit und absolut zuverlässig. Kann ich nur weiterempfehlen!</div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Ahmet Y.</div><div class="reviewCard__time">vor 4 Monaten</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Ad Özkul</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Sehr professionell und freundlich. Innenraumreinigung war extrem gründlich. Gerne wieder.</div>
+                <div class="reviewCard__text">Ich bin super zufrieden mit der Autoaufbereitung! Alles wurde gründlich und mit viel Liebe zum Detail gereinigt. Man merkt, dass hier jemand mit echter Leidenschaft arbeitet. Vor dem Sommerurlaub bringe ich mein Auto auf jeden Fall nochmal vorbei. Klare Empfehlung!</div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Tobias S.</div><div class="reviewCard__time">vor 2 Monaten</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Amar Fakhro</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Habe meinen Oldtimer hier aufbereiten lassen. Der Lack glänzt wieder wie am ersten Tag.</div>
+                <div class="reviewCard__text">Ich bin total begeistert von der Innenraumaufbereitung! Mein Auto war innen ziemlich abgenutzt und verschmutzt – jetzt sieht es aus wie frisch vom Band. </div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Lisa P.</div><div class="reviewCard__time">vor 1 Monat</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Michell</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Schnelle Terminvergabe und super Ergebnis bei der Polsterreinigung.</div>
+                <div class="reviewCard__text">War zur Innenaufbereitung. alles gründlich gereinigt, jedes Detail beachtet. Freundlich, zuverlässig und fair. Komme gerne wieder. Klare 5 Sterne</div>
               </article>
                <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Justin M.</div><div class="reviewCard__time">vor 1 Monat</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Niclas Martin</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Super Arbeit! Mein Wagen sieht aus wie neu. Emre nimmt sich wirklich Zeit für jedes Detail.</div>
+                <div class="reviewCard__text">Tolle und saubere Arbeit! Mit dem richtigen Auge fürs Detail wurde mein VW Touran wieder auf Hochglanz gebracht. Der ganze Dreck und die Flecken von den Kindern sind wieder weg.</div>
               </article>
               <article class="reviewCard">
-                <div class="reviewCard__top"><div class="reviewCard__name">Sarah K.</div><div class="reviewCard__time">vor 2 Monaten</div></div>
+                <div class="reviewCard__top"><div class="reviewCard__name">Slice</div><div class="reviewCard__time"></div></div>
                 <div class="reviewCard__stars">★★★★★</div>
-                <div class="reviewCard__text">Leasingrückgabe gerettet. Alle Kratzer rausbekommen, keine Nachzahlung. Danke!</div>
+                <div class="reviewCard__text">Sehr saubere und gründliche Aufbereitung. Das Aufbereiten wird mit sehr viel Liebe und Aufmerksamkeit gemacht welches das Auto wie neu aussehen lässt.</div>
               </article>
             </div>
           </div>
