--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <div class="cards" style="grid-template-columns: 1fr;">
 <details class="faqCard reveal">
   <summary class="h3 faqSummary">Wie lange dauert eine Aufbereitung?</summary>
-  <p class="p">Je nach Zustand und gebuchtem Paket zwischen 4 und 8 Stunden. Bei Keramikversiegelungen kann das Fahrzeug auch über Nacht bleiben, um optimal auszuhärten.</p>
+  <p class="p">Je nach Zustand und gebuchtem Paket zwischen 1 und 4 Stunden. Bei Keramikversiegelungen muss das Fahrzeug über Nacht bleiben, um optimal auszuhärten.</p>
 </details>
 
 <details class="faqCard reveal">
