--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="hero__panel reveal">
           <div class="videoCard shimmer">
-            <iframe src="https://www.youtube.com/embed/pNqHNbu-Ns4?rel=0&controls=0&autoplay=1&mute=1&loop=1&playlist=rgNpZKLtmhQ" title="Emre Details Work" allow="autoplay; encrypted-media"></iframe>
+            <iframe src="https://www.youtube.com/embed/pNqHNbu-Ns4?rel=0&controls=0&autoplay=1&mute=1&loop=1&playlist=pNqHNbu-Ns4" title="Emre Details Work" allow="autoplay; encrypted-media"></iframe>
           </div>
           
 <div class="hero__socials">
