--- a/leistungen.html
+++ b/leistungen.html
@@ -147,7 +147,7 @@
       <div class="container">
         <div class="sectionHead reveal">
           <h2 class="h2">Einzelleistungen & Add-ons</h2>
-          <p class="sub">Stellen Sie sich Ihr Wunschprogramm individuell zusammen oder buchen Sie gezielt einzelne Services.</p>
+          <p class="sub">Stelle dir dein Wunschprogramm individuell zusammen oder buche gezielt einzelne Services.</p>
         </div>
 
         <div class="service-grid reveal">
@@ -155,11 +155,11 @@
           <div class="service-category">Basics & Reinigung</div>
           
           <div class="metaLine glass6">
-            <span class="metaLine__v">Handwäsche (schonend)</span>
+            <span class="metaLine__v">Handwäsche</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 60 €</span>
           </div>
           <div class="metaLine glass6">
-            <span class="metaLine__v">Motorwäsche & Konservierung</span>
+            <span class="metaLine__v">Motorwäsche</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 40 €</span>
           </div>
 
@@ -174,14 +174,14 @@
             <span class="metaLine__k" style="color:var(--accent);">ab 400 €</span>
           </div>
           <div class="metaLine glass6">
-            <span class="metaLine__v">Mehrstufige High-End Politur</span>
+            <span class="metaLine__v">Mehrstufige Politur</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 700 €</span>
           </div>
 
           <div class="service-category">Schutz & Versiegelung</div>
 
           <div class="metaLine glass6">
-            <span class="metaLine__v">Wachsversiegelung (Premium)</span>
+            <span class="metaLine__v">Wachsversiegelung</span>
             <span class="metaLine__k" style="color:var(--accent);">ab 100 €</span>
           </div>
           <div class="metaLine glass6">
