--- a/leistungen.html
+++ b/leistungen.html
@@ -95,7 +95,7 @@
                 <div style="margin-top:24px; font-size:26px; font-weight:600; color:var(--text);">ab 300 €</div>
              </div>
              <div class="glassCard__bottom" style="margin-top:auto;">
-                <a class="pill pill--ghost pill--full" href="https://wa.me/491714745229?text=Interesse%20am%20Refresh%20Paket%20(ab%20300)">Termin anfragen</a>
+                <a class="pill pill--ghost pill--full" href="./kontakt.html">Termin anfragen</a>
              </div>
           </article>
 
@@ -115,7 +115,7 @@
                 <div style="margin-top:24px; font-size:26px; font-weight:600; color:var(--text);">ab 500 €</div>
              </div>
              <div class="glassCard__bottom" style="margin-top:auto;">
-                <a class="pill pill--primary pill--full" href="https://wa.me/491714745229?text=Interesse%20am%20Intensiv%20Paket%20(ab%20500)">Termin anfragen</a>
+                <a class="pill pill--primary pill--full" href="./kontakt.html">Termin anfragen</a>
              </div>
           </article>
 
@@ -135,7 +135,7 @@
                 <div style="margin-top:24px; font-size:26px; font-weight:600; color:var(--text);">ab 1.000 €</div>
              </div>
              <div class="glassCard__bottom" style="margin-top:auto;">
-                <a class="pill pill--ghost pill--full" href="https://wa.me/491714745229?text=Interesse%20an%20High-End%20Keramik%20(ab%201000)">Beratung & Termin</a>
+                <a class="pill pill--ghost pill--full" href="./kontakt.html">Beratung & Termin</a>
              </div>
           </article>
         </div>
