--- a/kontakt.html
+++ b/kontakt.html
@@ -135,8 +135,9 @@
         </div>
         <div class="footer__right">
           <div class="footer__legal">
-             <a class="footer__link" href="./impressum.html">Impressum</a>
-             <a class="footer__link" href="./datenschutz.html">Datenschutz</a>
+            <a class="footer__link" href="./impressum.html" role="listitem">Impressum</a>
+            <a class="footer__link" href="./agb.html" role="listitem">AGB</a>
+            <a class="footer__link" href="./datenschutz.html" role="listitem">Datenschutz</a>
           </div>
           <div class="footer__copy">© <span id="year"></span> EmreDetails</div>
         </div>
