--- a/datenschutz.html
+++ b/datenschutz.html
@@ -8,20 +8,15 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <header class="topbar" data-elevate>
+  <header class="topbar">
     <div class="container topbar__inner">
-      <a class="brand" href="./index.html" aria-label="Startseite EmreDetails">
-        <img class="brand__logo" src="./logo.png" alt="EmreDetails Logo" loading="eager" decoding="async">
-      </a>
-      <nav class="nav" aria-label="Hauptmenü">
+      <a class="brand" href="./index.html"><img class="brand__logo" src="https://cdn.prod.website-files.com/67f11742c5f3bcc352d799cc/67f14fa65b0383b0565fd742_emre%20details%20blue%20transparent%20bg.png" alt="Logo"></a>
+      <nav class="nav">
         <a class="nav__link" href="./index.html">Home</a>
         <a class="nav__link" href="./leistungen.html">Leistungen</a>
         <a class="nav__link" href="./kontakt.html">Kontakt</a>
       </nav>
-      <div class="topbar__actions">
-        <a class="pill pill--ghost" href="https://instagram.com/emredetails" target="_blank" rel="noreferrer">Instagram</a>
-        <a class="pill pill--primary" href="https://wa.me/491714745229" target="_blank" rel="noreferrer">WhatsApp</a>
-      </div>
+      <div class="topbar__actions"><a class="pill pill--primary" href="https://wa.me/4915755821180"><img class="pill__img" src="./whatsapp.png" alt=""> WhatsApp</a></div>
     </div>
   </header>
 
