--- a/kontakt.html
+++ b/kontakt.html
@@ -67,7 +67,7 @@
 
               <a href="tel:+4915755821180" class="metaLine glass6" style="text-decoration:none; margin-bottom:10px;">
                   <span class="metaLine__k">Telefon</span>
-                  <span class="metaLine__v">Anrufen: +49 171 4745229</span>
+                  <span class="metaLine__v">+49 171 4745229</span>
               </a>
 
               <a href="mailto:info@emredetails.de" class="metaLine glass6" style="text-decoration:none;">
